# sign-up-and-log-in-api-using-fastapi-and-postgry-sql

./: README.md  alembic.ini  config.py  main.py  pyproject.toml
Scripts/: create_admin.py
alembic/: env.py
alembic/versions/: 1d089dcab7f0_add_user_table.py  35ee287096a0_add_user_table.py  5688b866ab56_add_user_table.py  62a4ff114778_add_user_table.py  8e9ef9d6a34f_add_user_table.py  a14d994faab2_create_user_table.py
app/: app.py  database.py
app/Router/: admin.py  auth.py  logIn.py  verify.py
app/Schema/: User.py
app/core/: core.py  security.py
app/dependencies/: auth.py  get_current_admin.py
app/models/: User.py
app/utils/: email.py  varification_email.py
